@@ -1118,7 +1118,7 @@ class AsyncTable(Generic[ROW]):
                 table_name=self.name,
             )
 
-    def info(
+    async def info(
         self,
         *,
         request_timeout_ms: int | None = None,
@@ -1128,11 +1128,12 @@ class AsyncTable(Generic[ROW]):
         TODO
         """
 
+        db_info = await self.database.info(
+            request_timeout_ms=request_timeout_ms,
+            max_time_ms=max_time_ms,
+        )
         return TableInfo(
-            database_info=self.database.info(
-                request_timeout_ms=request_timeout_ms,
-                max_time_ms=max_time_ms,
-            ),
+            database_info=db_info,
             keyspace=self.keyspace,
             name=self.name,
             full_name=self.full_name,
